# nixie_clock

./: .gitignore  README.md  annotated.html  annotated_dup.js  classes.html  clock_8c.html  clock_8c.js  clock_8c__incl.map  clock_8c__incl.md5  clock_8h.html  clock_8h.js  clock_8h__dep__incl.map  clock_8h__dep__incl.md5  clock_8h__incl.map  clock_8h__incl.md5  clock_8h_source.html  clock__task_8c.html  clock__task_8c.js  clock__task_8c__incl.map  clock__task_8c__incl.md5  clock__task_8h.html  clock__task_8h.js  clock__task_8h__dep__incl.map  clock__task_8h__dep__incl.md5  clock__task_8h__incl.map  clock__task_8h__incl.md5  clock__task_8h_source.html  config_8c.html  config_8c.js  config_8c__incl.map  config_8c__incl.md5  config_8h.html  config_8h.js  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  dir_000001_000000.html  dir_000001_000003.html  (+338 more)
.github/workflows/: ai_audit.yml  doc.yml  docs.yml  misra_check.yml
hardware/: connectors.kicad_sch  cpu.kicad_sch  driver_3_digits_1_dot.kicad_sch  driver_3_digits_1_dot_right.kicad_sch  nixie_clock.kicad_pcb  nixie_clock.kicad_prl  nixie_clock.kicad_pro  nixie_clock.kicad_sch  power_supply.kicad_sch
hardware/3d/: nixie_clock.SLDPRT
hardware/bom/: bom.xlsx
hardware/components/HighVoltage_Symbol/: Symbol_HighVoltage_Triangle_6x6mm_Copper.kicad_mod
hardware/components/Nixies/: NX-SZP-IN3-v01.STEP
hardware/components/PEC11R-4215F-S0024/: PEC11R-4215F-S0024.kicad_sym  XDCR_PEC11R-4215F-S0024.kicad_mod
hardware/docs/: pinout_mapping.xlsx
hardware/jlcpcb/production_files/: BOM-nixie_clock.csv  CPL-nixie_clock.csv
hardware/logo/: embarque-logo-full.dxf
hardware/logo/embarque.pretty/: embarque.kicad_mod  embarque_dot_ch.kicad_mod
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  files_0.js  (+37 more)
software/docs/plantuml/: architecture.uml
software/nixie_clock_esp32_project/: CMakeLists.txt  sdkconfig
software/nixie_clock_esp32_project/cppcheck/: CMakeLists.txt
software/nixie_clock_esp32_project/docs/: Doxyfile
software/nixie_clock_esp32_project/main/: CMakeLists.txt  clock_task.c  clock_task.h  esp_stub.h  gpio_task.c  gpio_task.h  main.c  ntp_sync_task.c  ntp_sync_task.h
software/nixie_clock_esp32_project/test/: CMakeLists.txt  display_encode_time.c  display_shift_compute.c  test_main.c
software/nixie_clock_esp32_project/test/common/: esp_stub.h  hv5622_mock.h  nvs_mock.c  nvs_mock.h
software/nixie_clock_esp32_project/test/integration/: CMakeLists.txt  test_integration_main.c
software/nixie_clock_esp32_project/test/unit/: CMakeLists.txt  hv5622_mock.c  hv5622_mock.h  test_clock.c  test_display.c  test_nvs.c  test_rotary_encoder.c  test_unit_main.c
(+58 files in other folders)
